--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <h1 class="title is-1 publication-title">Samba: Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a target="_blank" rel="noopener noreferrer" href="https://mattiasegu.github.io/">Mattia Segu</a><sup>1</sup>,
+              <a target="_blank" rel="noopener noreferrer" href="https://mattiasegu.github.io/">Mattia Segu</a><sup>1,2</sup>,
             </span>
             <span class="author-block">
               <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=2I55eokAAAAJ&hl">Luigi Piccinelli</a><sup>1</sup>,
@@ -71,15 +71,14 @@
               <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl=en">Bernt Schiele</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=TwMib_QAAAAJ&hl=en">Luc Van Gool</a><sup>1,3,4</sup>,
+              <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=TwMib_QAAAAJ&hl=en">Luc Van Gool</a><sup>1,3</sup>,
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>ETH Zurich, </span>
-            <span class="author-block"><sup>2</sup>Max Planck Institute for Informatics</span>
-            <span class="author-block"><sup>3</sup>KU Leuven, </span>
-            <span class="author-block"><sup>4</sup>INSAIT Sofia</span>
+            <span class="author-block"><sup>2</sup>Max Planck Institute for Informatics, </span>
+            <span class="author-block"><sup>3</sup>INSAIT Sofia</span>
           </div>
 
           <div class="column has-text-centered">
@@ -138,10 +137,12 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <div class="image-viewport">
-        <img id="rotatingImage" src="static/images/teaser_circ.jpg" alt="Teaser" />
-      </div>
+      <!-- <div class="image-viewport">
+        <img id="rotatingImage" src="static/images/sambamotr.jpg" alt="Teaser" />
+      </div> -->
       <!--<img src="static/images/teaser_thin.jpg">-->
+      <img width="100%" src="./static/images/sambamotr.png" alt="SambaMOTR Teaser"/>
+
       <h2 class="subtitle has-text-centered">
         <span class="methodname">SambaMOTR</span> is an end-to-end multi-object tracker that models long-range dependencies within and across tracklets through synchronized state space models (Samba).
       </h2>
@@ -165,7 +166,7 @@
             in hidden states that are synchronized across tracklets. Additionally, we introduce an effective technique for dealing with uncertain observations and
             an efficient training recipe to scale SambaMOTR to longer sequences. Our approach enables accurate modeling of long-range dependencies and interactions
             among tracked objects, while implicitly learning object motion and appearance changes without the need for any hand-crafted occlusion-handling heuristics.
-            SambaMOTR significantly surpasses prior state of the art on the DanceTrack, BFT, and SportsMOT datasets. Our code will be public.
+            SambaMOTR significantly surpasses prior state of the art on the DanceTrack, BFT, and SportsMOT datasets.
           </p>
         </div>
       </div>
@@ -174,39 +175,34 @@
   </div>
 </section>
 
+
 <section class="section pt-0">
   <div class="container is-max-desktop">
     <!-- Method. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Which problems does DGInStyle solve?</h2>
+        <h2 class="title is-3">SambaMOTR</h2>
         <div class="content has-text-justified">
           <h3 class="title has-text-centered">
-            Style drift
+            Motivation
           </h3>
 
           <p>
-            When training on synthetic data, ControlNet learns not only to control but also to steer the generation
-            style toward the synthetic domain. This issue constrains the quality and diversity of the output generation
-            and hinders the usage of the rich generative prior to the full extent. The style drift issue and the way
-            DGInStyle addressed it are exemplified in the figure below.
+            Some text.
           </p>
 
-          <img width="100%" src="./static/images/style_overfit.jpg" alt="Style drift issue fixed"/>
+          <img width="100%" src="./static/images/sambamotr.png" alt="Tracking through occlusions with SambaMOTR"/>
+          <!-- <img width="100%" src="./static/images/sambamotr_memotr_motivation.png" alt="Tracking through occlusions with SambaMOTR"/> -->
 
           <h3 class="title has-text-centered">
-            Small instances
+            Architecture
           </h3>
 
           <p>
-            Stable Diffusion operates in the latent space, and therefore, its effective resolution is limited. We pay
-            special attention to small instances when generating high-resolution images conditioned on high-resolution
-            semantic masks. Such attention helps with the coherency of the generated data and improves downstream
-            applications, such as semantic segmentation. The small instances issue and the way DGInStyle addressed it
-            are exemplified in the figure below.
+            Some text.
           </p>
 
-          <img width="100%" src="./static/images/small_instances.jpg" alt="Small instances issue fixed"/>
+          <img width="100%" src="./static/images/sambamotr.png" alt="SambaMOTR model architecture"/>
 
           <p class="mt-5">
             Refer to the pdf paper for more details on qualitative, quantitative, and ablation studies.
@@ -218,34 +214,35 @@
   </div>
 </section>
 
+
+
+
 <section class="section pt-0">
   <div class="container is-max-desktop">
     <!-- Method. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">How good is DGInStyle data?</h2>
+        <h2 class="title is-3">Samba: Synchronized Set-of-Sequences Modeling</h2>
         <div class="content has-text-justified">
           <h3 class="title has-text-centered">
-            Quantitative study
+            Synchronized Selective State Space Models
           </h3>
 
           <p>
-            We train multiple state-of-the-art Domain Generalization solutions for semantic segmentation with DGInStyle
-            and obtain superior performance.
+            Some text.
           </p>
 
-          <img width="100%" src="./static/images/benchmark.jpg" alt="Benchmark"/>
+          <img width="100%" src="./static/images/ssm.png" alt="Synchronized Selective State Space Model"/>
 
           <h3 class="title has-text-centered">
-            Qualitative study
+            Samba Module
           </h3>
 
           <p>
-            Each mask can be used with multiple freeform text prompts to diversify the generated data and enable domain
-            generalization in downstream tasks. This is made possible thanks to the internet-scale generative prior.
+            Some text.
           </p>
 
-          <img width="100%" src="./static/images/weather_samples.jpg" alt="Small instances issue fixed"/>
+          <img width="100%" src="./static/images/samba_block.png" alt="Samba model architecture"/>
 
           <p class="mt-5">
             Refer to the pdf paper for more details on qualitative, quantitative, and ablation studies.
@@ -256,6 +253,45 @@
     <!--/ Method. -->
   </div>
 </section>
+
+
+<section class="section pt-0">
+  <div class="container is-max-desktop">
+    <!-- Method. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Qualitative Results</h2>
+        <div class="content has-text-justified">
+          <h3 class="title has-text-centered">
+            Comparison with MeMOTR
+          </h3>
+
+          <p>
+            Some text.
+          </p>
+
+          <!-- <img width="100%" src="./static/images/ssm.png" alt="Synchronized Selective State Space Model"/> -->
+
+          <h3 class="title has-text-centered">
+            More Qualitative Results
+          </h3>
+
+          <p>
+            Some text.
+          </p>
+
+          <!-- <img width="100%" src="./static/images/samba_block.png" alt="Samba model architecture"/> -->
+
+          <p class="mt-5">
+            Refer to the pdf paper for more details on qualitative, quantitative, and ablation studies.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Method. -->
+  </div>
+</section>
+
 
 <section class="section pt-0" id="BibTeX">
   <div class="container is-max-desktop content">
