--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
 </head>
 
 <body>
-  <nav class="navbar" role="navigation" aria-label="main navigation" style="background-color: #f8f9fa; padding: 0rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">
+  <nav class="navbar" role="navigation" aria-label="main navigation" style="background-color: #f8f9fa; padding: 0rem; box-shadow: 0 2px 5px rgba(0,0,0,0.1); overflow-x: auto;">
     <div class="container is-max-desktop">
       <div class="navbar-brand" style="display: flex; justify-content: center; width: 100%;">
+        <!-- Updated to allow horizontal scrolling on mobile -->
         <a class="navbar-item" href="#abstract" style="font-weight: bold;">Abstract</a>
         <a class="navbar-item" href="#SambaMOTR" style="font-weight: bold;">SambaMOTR</a>
         <a class="navbar-item" href="#Samba" style="font-weight: bold;">Samba</a>
