Improve teaser videos

--- a/index.html
+++ b/index.html
@@ -156,19 +156,20 @@
           <div class="column is-one-third">
             <h4 class="title is-5 has-text-centered">DanceTrack</h4>
             <video poster="" autoplay controls muted loop playsinline width="100%">
-              <source src="./static/videos/dancetrack/dancetrack0038.mp4" type="video/mp4">
+              <source src="./static/videos/teaser/dancetrack0058.mp4" type="video/mp4">
             </video>
           </div>
           <div class="column is-one-third">
             <h4 class="title is-5 has-text-centered">BFT</h4>
             <video poster="" autoplay controls muted loop playsinline width="100%">
-              <source src="./static/videos/bft/An1002.mp4" type="video/mp4">
+              <!-- <source src="./static/videos/teaser/output_video" type="video/mp4"> -->
+              <source src="./static/videos/teaser/bft_An1009_crop.mp4" type="video/mp4">
             </video>
           </div>
           <div class="column is-one-third">
             <h4 class="title is-5 has-text-centered">SportsMOT</h4>
             <video poster="" autoplay controls muted loop playsinline width="100%">
-              <source src="./static/videos/sportsmot/v_0kUtTtmLaJA_c010.mp4" type="video/mp4">
+              <source src="./static/videos/teaser/sportsmot_v_4-EmEtrturE_c009.mp4" type="video/mp4">
             </video>
           </div>
         </div>
