--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
   <script defer src="./static/js/fontawesome.all.min.js"></script>
   <script src="./static/js/bulma-carousel.min.js"></script>
   <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 </head>
 
 <body>
@@ -187,8 +189,7 @@
           <h2 class="title is-3 has-text-centered" style="padding-top: 20px;">Abstract</h2>
           <div class="content has-text-justified">
             <p>
-              Learning long-term memory representations is a critical yet often neglected aspect of many temporal visual tasks, such as multiple object tracking. However, it remains an open research question how to model and handle, in a principled fashion, long-range dependencies within each tracklet, interaction among tracklets, as well as temporal occlusions. In this paper, we propose SambaMOTR, the first end-to-end tracking-by-propagation approach that addresses all these issues. SambaMOTR propagates track queries using Samba, our novel linear-time set-of-sequences model inspired by Mamba and based on our novel synchronized selective state spaces. Samba autoregressively predicts the future track query for each sequence while maintaining its history in hidden states that are synchronized across tracklets. Additionally, we introduce an effective technique for dealing with uncertain observations and an efficient training recipe to scale SambaMOTR to longer sequences. Our approach enables accurate modeling of long-range dependencies and interactions among tracked objects, while implicitly learning object motion and appearance changes without the need for any hand-crafted occlusion-handling heuristics. 
-              Multiple object tracking in complex scenarios, such as dance performances, team sports, or animal groups, presents unique challenges that traditional tracking methods often struggle to address. In these settings, objects frequently move in coordinated patterns, occlude each other, and exhibit long-term dependencies in their trajectories. By accounting for these complex interactions, SambaMOTR can maintain consistent tracking even during occlusions, rapid movements, and densely packed scenes typical in these challenging datasets. SambaMOTR significantly surpasses prior state of the art on the DanceTrack, BFT, and SportsMOT datasets.
+              Multiple object tracking in complex scenarios - such as coordinated dance performances, team sports, or dynamic animal groups - presents unique challenges. In these settings, objects frequently move in coordinated patterns, occlude each other, and exhibit long-term dependencies in their trajectories. However, it remains a key open research question on how to model long-range dependencies within tracklets, interdependencies among tracklets, and the associated temporal occlusions. To this end, we introduce Samba, a novel linear-time set-of-sequences model designed to jointly process multiple tracklets by synchronizing the multiple selective state-spaces used to model each tracklet. Samba autoregressively predicts the future track query for each sequence while maintaining synchronized long-term memory representations across tracklets. By integrating Samba into a tracking-by-propagation framework, we propose SambaMOTR, the first tracker effectively addressing the aforementioned issues, including long-range dependencies, tracklet interdependencies, and temporal occlusions. Additionally, we introduce an effective technique for dealing with uncertain observations (MaskObs) and an efficient training recipe to scale SambaMOTR to longer sequences. By modeling long-range dependencies and interactions among tracked objects, SambaMOTR implicitly learns to track objects accurately through occlusions without any hand-crafted heuristics. Our approach significantly surpasses prior state-of-the-art on the DanceTrack, BFT, and SportsMOT datasets.
             </p>
           </div>
         </div>
@@ -215,7 +216,7 @@
             <img width="100%" src="./static/images/sambamotr.png" alt="SambaMOTR model architecture"/>
 
             <p>
-              SambaMOTR is composed of a transformer-based object detector and a Samba module. The object detector's encoder extracts image features from each frame, which are fed into its decoder together with detect and track queries to detect newborn objects or re-detect tracked ones. The Samba module simultaneously processes the past hidden states and currently observed output queries for all tracklets to predict the next track queries and update the hidden states. The hidden states of newborn objects are initialized from zero values (barred squares). In case of occlusions, the current observation is disregarded (red cross) during the Samba update. 
+              SambaMOTR combines a transformer-based object detector with a set-of-sequences Samba model. The object detector's encoder extracts image features from each frame, which are fed into its decoder together with detect and track queries to detect newborn objects or re-detect tracked ones. The Samba set-of-sequences model is composed of multiple synchronized Samba units that simultaneously process the past memory and currently observed output queries for all tracklets to predict the next track queries and update the track memory. The hidden states of newborn objects are initialized from zero values (barred squares). In case of occlusions or uncertain detections, the corresponding query is masked (red cross) during the Samba update. 
             </p>
           </div>
         </div>
@@ -234,24 +235,32 @@
           <h2 class="title is-3 has-text-centered" style="padding-top: 20px;">Samba: Synchronized Set-of-Sequences Modeling</h2>
           <div class="content has-text-justified">
             <h3 class="title has-text-centered" style="padding-top: 20px;">
-              Synchronized Selective State Space Models
+              Synchronized Selective State-Space Models
             </h3>
 
-            <img width="100%" src="./static/images/ssm.png" alt="Synchronized Selective State Space Model"/>
+            <img width="100%" src="./static/images/ssm.png" alt="Synchronized Selective State-Space Model"/>
 
-            <p>
+            <!-- <p>
               We illustrate a set of <i>k</i> selective state space models whose hidden states <i>h<sup>i</sup><sub>t</sub></i> updated with the current observations <i>x<sup>i</sup><sub>t</sub></i> are synchronized by our state synchronization block to derive the synchronized hidden state <i>&#772;h<sup>i</sup><sub>t</sub></i>, used to predict the output <i>y<sup>i</sup><sub>t</sub></i>.
+            </p> -->
+
+            
+            <p>We illustrate a set of <span class="equation">\( k \)</span> synchronized SSMs. A Long-Term Memory Update block updates each hidden state 
+              <span class="equation"> \( \tilde{h}_{t-1}^i \) </span> based on the current observation 
+              <span class="equation"> \( x_t^i \) </span>, resulting in the updated memory 
+              <span class="equation"> \( h_t^i \) </span>. The Memory Synchronization block then derives the synchronized hidden state 
+              <span class="equation"> \( \tilde{h}_t^i \) </span>, which is fed into the Output Update module to predict the output 
+              <span class="equation"> \( y_t^i \) </span>.
             </p>
 
             <h3 class="title has-text-centered" style="padding-top: 20px;">
-              Samba Module
+              Set-of-sequences Model
             </h3>
 
 
-            <img width="100%" src="./static/images/samba_block.png" alt="Samba model architecture"/>
-
+            <img width="100%" src="./static/images/set-of-sequences.png" alt="Samba model architecture"/>
             <p>
-              A Samba block is composed of multiple Mamba blocks with shared weights and a state synchronization block that synchronizes hidden states across the individual state space models. A stack of N Samba blocks constitutes a Samba module.
+              Our set-of-sequences model Samba simultaneously processes an arbitrary number <span class="equation">\( M \)</span> of input sequences. Each sequence is processed by a Samba unit, synchronized with the others thanks to our synchronized state-space model. All Samba units share weights and are composed of a stack of <span class="equation">\( N \)</span>  Samba blocks. A Samba block has the same architecture as a Mamba block, but it adopts our synchronized SSM to synchronize long-term memory representations across the individual SSMs.
             </p>
           </div>
         </div>
@@ -434,4 +443,3 @@
 
 </body>
 </html>
-
