--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="twitter:card" content="summary">
-  <meta name="twitter:image:src" content="http://https://sambamotr.github.io/dginstyle_logo_square.jpg">
+  <meta name="twitter:image:src" content="http://https://sambamotr.github.io/static/images/logo.png">
   <meta name="twitter:title" content="SambaMOTR">
   <meta name="twitter:description" content="Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking">
   <meta name="twitter:creator" content="@mattiasegu">
@@ -102,7 +102,8 @@
               <div class="publication-links">
                 <!-- PDF Link. -->
                 <span class="link-block">
-                  <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2312.03048"
+                  <!-- TODO: edit the ling -->
+                  <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fas fa-file-pdf" style="color: #ff8038"></i>
@@ -411,7 +412,8 @@
   author        = {Mattia Segu, Luigi Piccinelli, Siyuan Li, Yung-Hsu Yang,  Bernt Schiele, Luc Van Gool},
   title         = {Samba: Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking},
   year          = {2024},
-  eprint        = {2406.03048},
+  eprint        = {2410.xxxxx},
+  <!-- TODO fix citation -->
   archivePrefix = {arXiv},
   primaryClass  = {cs.CV}
 }</code></pre>
