Update links and bibtex

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <!-- PDF Link. -->
                 <span class="link-block">
                   <!-- TODO: edit the ling -->
-                  <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/"
+                  <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2410.01806"
                      class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                         <i class="fas fa-file-pdf" style="color: #ff8038"></i>
@@ -409,13 +409,10 @@
     <div class="container is-max-desktop content">
       <h2 class="title has-text-centered" style="padding-top: 20px;">BibTeX</h2>
       <pre class="selectable"><code>@article{segu2024samba,
-  author        = {Mattia Segu, Luigi Piccinelli, Siyuan Li, Yung-Hsu Yang,  Bernt Schiele, Luc Van Gool},
-  title         = {Samba: Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking},
-  year          = {2024},
-  eprint        = {2410.xxxxx},
-  <!-- TODO fix citation -->
-  archivePrefix = {arXiv},
-  primaryClass  = {cs.CV}
+  author   =  {Segu, Mattia and Piccinelli, Luigi and Li, Siyuan and Yang, Yung-Hsu and Schiele, Bernt and Van Gool, Luc},
+  title    =  {Samba: Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking},
+  journal  =  {arXiv preprint arXiv:2410.01806},
+  year     =  {2024}
 }</code></pre>
     </div>
   </section>
