--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <!-- Logo placed above the title -->
             <img src="./static/images/logo.png" alt="SambaMOTR Logo" style="max-width: 150px; margin-bottom: 20px;">
             <h1 class="title publication-title" style="font-size: 2.5rem;">Samba: Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking</h1>
+            <p class="subtitle" style="font-size: 1.5rem; font-weight: bold; color: #ff8038;">[ICLR Spotlight 2025]</p>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
                 <a target="_blank" rel="noopener noreferrer" href="https://mattiasegu.github.io/">Mattia Segu</a><sup>1,2</sup>,
@@ -85,10 +86,10 @@
               </span>
               <br>
               <span class="author-block">
-                <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl=en">Bernt Schiele</a><sup>1</sup>,
+                <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=TwMib_QAAAAJ&hl=en">Luc Van Gool</a><sup>1,3</sup>,
               </span>
               <span class="author-block">
-                <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=TwMib_QAAAAJ&hl=en">Luc Van Gool</a><sup>1,3</sup>,
+                <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=z76PBfYAAAAJ&hl=en">Bernt Schiele</a><sup>2</sup>
               </span>
             </div>
 
@@ -97,6 +98,7 @@
               <span class="author-block"><sup>2</sup>Max Planck Institute for Informatics, </span>
               <span class="author-block"><sup>3</sup>INSAIT Sofia</span>
             </div>
+
 
             <div class="column has-text-centered">
               <div class="publication-links">
@@ -177,6 +179,10 @@
             </video>
           </div>
         </div>
+        <p class="has-text-centered" style="margin-top: 15px; font-size: 1rem; color: #555;">
+          Examples of objects moving in coordinated patterns, highlighting the motivation behind our work. <br>
+          Refer to <a href="#results">Results</a> for detailed tracking results using SambaMOTR.
+        </p>
       </div>
     </div>
   </section>
@@ -422,7 +428,7 @@
     <div class="container is-max-desktop content">
       <h2 class="title has-text-centered" style="padding-top: 20px;">BibTeX</h2>
       <pre class="selectable"><code>@article{segu2024samba,
-  author   =  {Segu, Mattia and Piccinelli, Luigi and Li, Siyuan and Yang, Yung-Hsu and Schiele, Bernt and Van Gool, Luc},
+  author   =  {Segu, Mattia and Piccinelli, Luigi and Li, Siyuan and Yang, Yung-Hsu and Van Gool, Luc and Schiele, Bernt},
   title    =  {Samba: Synchronized Set-of-Sequences Modeling for End-to-end Multiple Object Tracking},
   journal  =  {arXiv preprint arXiv:2410.01806},
   year     =  {2024}
